6.12 paragraph line spacing fix

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -114,7 +114,9 @@ footer {
 .latest-comment {
   display: block;
   border: 2px solid $color2;
+  margin-bottom: 2em;
   p {
     text-align: left;
+    line-height: 120%;
   }
 }
